--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "type": "module",
   "devDependencies": {},
   "scripts": {
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
